refactor(cluster): ♻️ 重构集群角色用户相关代码
重构集群角色用户模块，包括以下改动：
- 移除JDK21相关特性说明
- 引入DTO/VO模式，增加ClusterRoleUserDTO和ClusterRoleUserVO
- 新增转换器ClusterRoleUserConverter处理实体与DTO/VO转换
- 服务层继承IService使用标准CRUD方法
- 更新Mapper层注释，明确业务查询方法
- 优化控制器返回值和参数类型

涉及文件包括ClusterInfoVO、ClusterRoleUserMapper、ClusterRoleUserService等

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>