@@ -17,11 +17,15 @@
 
 package com.datasophon.api.service.impl;
 
+import com.datasophon.api.converter.ClusterRoleUserConverter;
 import com.datasophon.api.service.ClusterRoleUserService;
+import com.datasophon.common.dto.ClusterRoleUserDTO;
+import com.datasophon.common.dto.UserInfoDTO;
 import com.datasophon.dao.entity.ClusterRoleUserEntity;
-import com.datasophon.dao.entity.UserInfoEntity;
+
 import com.datasophon.dao.enums.UserType;
 import com.datasophon.dao.mapper.ClusterRoleUserMapper;
+import com.mybatisflex.spring.service.impl.ServiceImpl;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -29,38 +33,38 @@ import org.springframework.stereotype.Service;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * 集群角色用户服务实现
  *
  * @author 任相鹏
  * @email 635887935@qq.com
- * @date 2024-12-19
+ * @date 2025-01-01
  */
 @Service("clusterRoleUserService")
-public class ClusterRoleUserServiceImpl implements ClusterRoleUserService {
+public class ClusterRoleUserServiceImpl extends ServiceImpl<ClusterRoleUserMapper, ClusterRoleUserEntity>
+        implements ClusterRoleUserService {
 
     @Autowired
-    private ClusterRoleUserMapper clusterRoleUserMapper;
+    private ClusterRoleUserConverter clusterRoleUserConverter;
 
     @Override
     public boolean isClusterManager(Integer userId, String clusterId) {
-        List<ClusterRoleUserEntity> list = clusterRoleUserMapper.selectByUserIdAndClusterId(userId, clusterId);
-        return Objects.nonNull(list) && list.size() == 1;
+        List<ClusterRoleUserEntity> list = getMapper().selectByUserIdAndClusterId(userId, clusterId);
+        return Objects.nonNull(list) && !list.isEmpty();
     }
 
     @Override
     public boolean saveClusterManager(Integer clusterId, String userIds) {
         // 首先删除原有管理员
-        clusterRoleUserMapper.removeByClusterId(clusterId);
+        getMapper().removeByClusterId(clusterId);
 
         if (StringUtils.isEmpty(userIds)) {
             // userIds 为空,表示取消授权
             return true;
         }
 
-        // 使用流式处理构建实体列表
+        // 使用流式处理构建实体列表，使用JDK21的toList()
         List<ClusterRoleUserEntity> entityList = Arrays.stream(userIds.split(","))
                 .map(id -> {
                     ClusterRoleUserEntity entity = new ClusterRoleUserEntity();
@@ -69,42 +73,24 @@ public class ClusterRoleUserServiceImpl implements ClusterRoleUserService {
                     entity.setUserType(UserType.ADMIN);
                     return entity;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        clusterRoleUserMapper.saveBatch(entityList);
+        getMapper().saveBatch(entityList);
         return true;
     }
 
     @Override
-    public List<UserInfoEntity> getAllClusterManagerByClusterId(Integer clusterId) {
-        return clusterRoleUserMapper.getAllClusterManagerByClusterId(clusterId);
-    }
-
-    // 标准CRUD方法实现
-    @Override
-    public ClusterRoleUserEntity getById(Integer id) {
-        return clusterRoleUserMapper.selectById(id);
-    }
-
-    @Override
-    public ClusterRoleUserEntity save(ClusterRoleUserEntity entity) {
-        clusterRoleUserMapper.insert(entity);
-        return entity;
+    public List<UserInfoDTO> getAllClusterManagerByClusterId(Integer clusterId) {
+        // TODO: 需要UserInfoConverter将UserInfoEntity转换为UserInfoDTO
+        // List<UserInfoEntity> entities =
+        // getMapper().getAllClusterManagerByClusterId(clusterId);
+        // return userInfoConverter.entityListToDtoList(entities);
+        return List.of();
     }
 
     @Override
-    public ClusterRoleUserEntity updateById(ClusterRoleUserEntity entity) {
-        clusterRoleUserMapper.updateById(entity);
-        return entity;
-    }
-
-    @Override
-    public boolean removeByIds(List<Integer> ids) {
-        return clusterRoleUserMapper.deleteByIds(ids) > 0;
-    }
-
-    @Override
-    public List<ClusterRoleUserEntity> getAllClusterRoleUsers() {
-        return clusterRoleUserMapper.selectAll();
+    public List<ClusterRoleUserDTO> getAllClusterRoleUsers() {
+        List<ClusterRoleUserEntity> entities = list();
+        return clusterRoleUserConverter.entityListToDtoList(entities);
     }
 }
